--- a/wordcompletion/kdedocsourceui.ui
+++ b/wordcompletion/kdedocsourceui.ui
@@ -29,6 +29,9 @@
             <property name="checked">
                 <bool>false</bool>
             </property>
+            <property name="whatsThis" stdset="0">
+                <string>If you select this check box the words from the KDE documentation are spell-checked before they are inserted into the new dictionary.</string>
+            </property>
         </widget>
         <widget class="KURLRequester" row="2" column="1">
             <property name="name">
@@ -45,6 +48,9 @@
                     <verstretch>0</verstretch>
                 </sizepolicy>
             </property>
+            <property name="whatsThis" stdset="0">
+                <string>With this input field you select the OpenOffice.org directory that will be used to spellcheck the words of the new dictionary.</string>
+            </property>
         </widget>
         <widget class="QLabel" row="0" column="0">
             <property name="name">
@@ -60,6 +66,9 @@
             </property>
             <property name="text">
                 <string>&amp;Language:</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>With this combo box you select which of the installed languages is used for creating the new dictionary. KMouth will only parse documentation files of this language.</string>
             </property>
         </widget>
     </grid>
