Made it possible to select a custom language already when creating a new dictionary
svn path=/trunk/kdeaccessibility/kmouth/; revision=316451

--- a/wordcompletion/creationsourcedetailsui.ui
+++ b/wordcompletion/creationsourcedetailsui.ui
@@ -158,6 +158,7 @@
     </connection>
 </connections>
 <includes>
+    <include location="global" impldecl="in implementation">klineeditdlg.h</include>
     <include location="local" impldecl="in implementation">klanguagebutton.h</include>
     <include location="local" impldecl="in implementation">klanguagebuttonhelper.h</include>
     <include location="local" impldecl="in implementation">creationsourcedetailsui.ui.h</include>
@@ -168,12 +169,14 @@
 <variables>
     <variable access="public">KLanguageButton *languageButton;</variable>
 </variables>
+<slots>
+    <slot access="protected" specifier="non virtual">languageButton_activated( int index )</slot>
+</slots>
 <functions>
     <function access="private" specifier="non virtual">init()</function>
 </functions>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
-    <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
     <includehint>kpushbutton.h</includehint>
     <includehint>kcombobox.h</includehint>
