--- a/wordcompletion/wordcompletionui.ui
+++ b/wordcompletion/wordcompletionui.ui
@@ -284,6 +284,7 @@
 </functions>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
+    <includehint>kurlrequester.h</includehint>
     <includehint>kpushbutton.h</includehint>
     <includehint>kpushbutton.h</includehint>
     <includehint>kpushbutton.h</includehint>
