--- a/wordcompletion/creationsourceui.ui
+++ b/wordcompletion/creationsourceui.ui
@@ -110,7 +110,7 @@
                 <string>From f&amp;older</string>
             </property>
             <property name="whatsThis" stdset="0">
-                <string>If you select this box a new dictionary is created by loading all files all files in a folder and its subdirectories.</string>
+                <string>If you select this box a new dictionary is created by loading all files in a folder and its subdirectories.</string>
             </property>
         </widget>
         <spacer row="1" column="0" rowspan="3" colspan="1">
