--- a/wordcompletion/wordcompletionui.ui
+++ b/wordcompletion/wordcompletionui.ui
@@ -262,7 +262,7 @@
     <tabstop>selectedDictionaryDetails</tabstop>
 </tabstops>
 <includes>
-    <include location="global" impldecl="in implementation">klineeditdlg.h</include>
+    <include location="global" impldecl="in implementation">kinputdialog.h</include>
     <include location="local" impldecl="in implementation">klanguagebutton.h</include>
     <include location="local" impldecl="in implementation">klanguagebuttonhelper.h</include>
     <include location="local" impldecl="in implementation">wordcompletionui.ui.h</include>
@@ -288,6 +288,6 @@
     <includehint>kpushbutton.h</includehint>
     <includehint>kpushbutton.h</includehint>
     <includehint>klistview.h</includehint>
-    <includehint>klineedit.h</includehint>
+    <includehint>kinputdialog.h</includehint>
 </includehints>
 </UI>
