Launch my convert script
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=501922

--- a/texttospeechconfigurationui.ui
+++ b/texttospeechconfigurationui.ui
@@ -65,7 +65,7 @@
 %% -- a percent sign</string>
                     </property>
                 </widget>
-                <widget class="KURLRequester">
+                <widget class="KUrlRequester">
                     <property name="name">
                         <cstring>urlReq</cstring>
                     </property>
