--- a/phrasebook/buttonboxui.ui
+++ b/phrasebook/buttonboxui.ui
@@ -12,7 +12,7 @@
             <height>141</height>
         </rect>
     </property>
-    <property name="caption">
+    <property name="windowTitle">
         <string>Currently Selected Phrase or Phrase Book</string>
     </property>
     <grid>
