--- a/texttospeechconfigurationui.ui
+++ b/texttospeechconfigurationui.ui
@@ -12,7 +12,7 @@
             <height>222</height>
         </rect>
     </property>
-    <property name="caption">
+    <property name="windowTitle">
         <string>Text-to-Speech</string>
     </property>
     <vbox>
